# swedish-postal-codes

./: Cargo.toml  README.md  postal_codes.csv
src/: lib.rs  looks_like.rs
