[package]
name = "swedish-postal-codes"
version = "0.1.0"
authors = ["Simon Sawert <simon@sawert.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
